# ai-context-cli

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
src/ai_context/application/: __init__.py  extractive_stub.py  process_source.py  source_gate.py
src/ai_context/domain/: __init__.py  exceptions.py  models.py  ports.py
src/ai_context/infrastructure/extractors/: __init__.py  readability_extractor.py  stub_extractor.py
src/ai_context/infrastructure/fetchers/: __init__.py  http_fetcher.py  stub_fetcher.py
src/ai_context/infrastructure/processors/: markdown_converter.py
src/ai_context/infrastructure/summarizers/: __init__.py  extractive_summarizer.py  litellm_summarizer.py
src/ai_context/interfaces/: __init__.py  cli.py
src/ai_context/utils/: __init__.py
src/ai_context_cli/application/: __init__.py  process_source.py  source_gate.py
src/ai_context_cli/domain/: __init__.py  exceptions.py  models.py  ports.py
src/ai_context_cli/infrastructure/: __init__.py
src/ai_context_cli/infrastructure/extractors/: __init__.py  readability_extractor.py  stub_extractor.py
src/ai_context_cli/infrastructure/fetchers/: __init__.py  file_fetcher.py  http_fetcher.py  stub_fetcher.py
src/ai_context_cli/infrastructure/formatters/: __init__.py  json_formatter.py  markdown_formatter.py  plain_formatter.py
src/ai_context_cli/infrastructure/io/: __init__.py  file_writer.py
src/ai_context_cli/infrastructure/processors/: __init__.py  structure_analyzer.py
src/ai_context_cli/infrastructure/summarizers/: extractive_summarizer.py  litellm_summarizer.py
src/ai_context_cli/interfaces/: cli.py
src/ai_context_cli/utils/: plain_text.py
tests/: test_cli_stub.py  test_extractive_plain_text.py  test_extractive_stub.py  test_process_source.py  test_source_gate.py
tests/domain/: test_output_config.py
tests/infrastructure/: test_file_fetcher.py  test_file_writer.py  test_http_fetcher.py  test_litellm_summarizer.py  test_markdown_converter.py  test_output_formatters.py  test_pipeline_httpx_integration.py  test_readability_extractor.py  test_structure_analyzer.py
tests/utils/: test_plain_text_tokens.py
