[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Package metadata
# ---------------------------------------------------------------------------
[project]
name = "ai-context"
version = "0.1.0"
description = "CLI that transforms a URL or file into clean Markdown, a summary, and an AI-readable structure."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cli", "ai", "markdown", "scraper", "llm", "context"]

dependencies = [
    "typer[all]>=0.12",        # [all] pulls in rich + shellingham
    "pydantic>=2.7",
    "httpx>=0.27",
    "readability-lxml>=0.8",
    "markdownify>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
ai-context = "ai_context.interfaces.cli:app"

# ---------------------------------------------------------------------------
# Optional / dev dependencies
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ---------------------------------------------------------------------------
# Build — src layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/ai_context"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"

[tool.pytest.ini_options.markers]
e2e = "end-to-end tests that require network access (deactivated in CI)"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/ai_context"]
omit = ["src/ai_context/interfaces/*"]  # CLI wiring excluded from coverage target

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN101",   # missing type annotation for self
    "ANN102",   # missing type annotation for cls
]

[tool.ruff.lint.isort]
known-first-party = ["ai_context"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
